--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,26 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Courier New', Courier, monospace;
 }
 
 body {
   display: flex;
   flex-direction: column;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Courier New', Courier, monospace;
   height: 100vh;
 }
 
 .blur-screen {
-  height: 100%;
-  width: 100%;
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  backdrop-filter: blur(1px);
+  background-color: rgb(0, 0, 0, 0.5);
+  z-index: 1;
 }
 
-.blur {
-  /* background-color: rgb(155, 255, 255, .9); */
-  backdrop-filter: blur(2px);
+.hide {
+  display: none;
 }
 
 header {
@@ -94,6 +96,7 @@ header {
   height:30%;
   min-height: 450px;
   min-width: 300px;
+  background-color: #fafafa;
   border: solid 1px #ccc;
   border-radius: 2%;
   align-self: center;
@@ -110,8 +113,8 @@ header {
 }
 
 .inputProjectName {
-  padding: 0.5vw 0 0 0; 
-  margin-bottom: 50%;
+  padding: 8px 0 3px 0; 
+  margin-bottom: 45%;
 }
 
 .buttonContainer {
@@ -122,13 +125,20 @@ header {
 }
 
 .buttonContainer > input {
-  padding: 0.5vh 1vh;
+  padding: 5px 10px;
   margin-right: 5%;
+  border-radius: 8%;
 }
 
 .buttonContainer > input:nth-child(1) {
   margin-right: 5%;
 }
+
+.buttonContainer > input:nth-child(2) {
+  background-color: #db4c3f;
+  color: #FFF;
+}
+/* End popup */
 
 #content {
   display: flex;
