Some minor stlying changes on the popup menu. Altered the HTML of the mobile menu button to improve positioning. The mobile menu and project popup HTML is genererated, set to "display: none;", and toggled to reveal; rather than creating and deleting the HTML each time.

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ body {
   flex-direction: column;
   font-family: 'Courier New', Courier, monospace;
   height: 100vh;
+  min-width: 325px;
 }
 
 .blur-screen {
