--- a/css/styles.css
+++ b/css/styles.css
@@ -110,12 +110,27 @@ header {
   width: 100%;
   font-size: 1.8vh;
   text-decoration: none;  
-  margin: 10% 0 0 25%;
+  margin: 25% 0 0 25%;
 }
 
 .addProject:hover {
   cursor: pointer;
   text-decoration: underline;
+}
+
+.projectsList {
+  list-style-type: circle;
+  margin-top: 5vh;
+}
+
+.projectsList li {
+  display: list-item;
+  cursor: pointer;
+  margin-left: 25%;
+}
+
+.projectsList li:hover {
+  color: #db4c3f;
 }
 
 /* addProjectPopup.js */
