--- a/css/styles.css
+++ b/css/styles.css
@@ -201,15 +201,16 @@ header {
 #content {
   display: flex;
   flex-direction: column;
-  align-items: center;
   height: 100%;
   width: 84.15%;
 }
 
 .add-task {
+  position: absolute;
   cursor: pointer;
   color: #aaa;
   font-size: 1.65vh;
+  margin: 7% 0 0 29.5%;
 }
 
 .red-plus {
@@ -226,6 +227,18 @@ header {
 .red-plus:hover {
   background-color: #db4c3f;
   color: #fff;
+}
+
+.tasks-area {
+  margin: 5% 0 0 33%;
+}
+
+.tasks-area h2 {
+  font-size: 3vh;;
+}
+
+.tasks-area ul {
+  margin: 4% 0 0 0;
 }
 
 
